# EchoPose

./: .env  ARCHITECTURE.md  LICENSE  README.md  SIGNAL_PROCESSING.md  do_clean.py  docker-compose.yml
.agents/workflows/: deployment.md
aggregator/: Cargo.toml  Dockerfile
aggregator/logs/: aggregator.json.2026-03-15
aggregator/src/: denoise.rs  localize.rs  main.rs  sync.rs  types.rs
benchmarks/: compare_with_sota.py
deployment/: deploy.sh
firmware/: CMakeLists.txt  FLASHING_GUIDE.md  Kconfig.projbuild  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  csi_capture.c  csi_capture.h  main.c  ota_updater.c  ota_updater.h  udp_sender.c  udp_sender.h
inference/: custom_logger.py  gpu_server.py  optimized_inference.py  requirements.txt  security.py  server.py  server_v2.py
inference/logging/: structured_logger.py
inference/monitoring/: metrics.py
inference/pipeline/: advanced_denoise.py  denoise.py  filter.py  fusion.py  pose.py  pose_net_v2.py  robust_processing.py  temporal_filter_v2.py
inference/research/: adversarial_cert.py  cross_polarization.py  disambiguation.py  domain_adaptation.py  domain_shift_monitor.py  frequency_transfer.py  pinn.py
inference/scripts/: download_weights.py  export_onnx.py
k8s/: echo-pose-deployment.yaml
logs/: aggregator.json.2026-03-15  structured_inference.jsonl
research/: novel_techniques.py
scripts/: mock_esp32_mesh.py
systemd/: aggregator.service  inference.service
ui/: app.js  heatmap.js  index.html  recorder.js  skeleton.js  style.css
(+2 files in other folders)
