[package]
name        = "rf-aggregator"
version     = "0.1.0"
edition     = "2021"
description = "Distributed RF-Inference Mesh — UDP aggregator and WebSocket broadcaster"

[[bin]]
name = "aggregator"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",  features = ["full"] }
axum         = { version = "0.7", features = ["ws"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }
bytes        = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow       = "1"
dashmap      = "5"
tokio-stream = "0.1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
